--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="laravel boilerplate"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:iHaAh2VkcJ7GEij6eFeE55nbdmQpnMM6P9weAHGwNiw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
