updated default app name

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="laravel boilerplate"
+APP_NAME=entwurfhaus
 APP_ENV=local
 APP_KEY=base64:iHaAh2VkcJ7GEij6eFeE55nbdmQpnMM6P9weAHGwNiw=
 APP_DEBUG=true
