--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "resolve-url-loader": "3.1.1",
         "sass": "^1.23.7",
         "sass-loader": "7.*",
+        "serialize-javascript": "^2.1.2",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10",
-        "serialize-javascript": ">=2.1.1"
+        "vue-template-compiler": "^2.6.10"
     }
 }
