--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
-  "extends": [
-    "config:base"
-  ]
+    "extends": [
+        "config:base",
+        ":preserveSemverRanges"
+    ],
+    "dockerfile": {
+        "enabled": false
+    }
+
 }
