--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^2.0.0"
+        "laravel/tinker": "^2.0.0",
         "spatie/laravel-analytics": "^3.8"
     },
     "require-dev": {
