--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^2.0.0",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-analytics": "^3.8"
     },
     "require-dev": {
