--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=entwurfhaus
+APP_NAME=Entwurfhaus
 APP_ENV=local
 APP_KEY=base64:iHaAh2VkcJ7GEij6eFeE55nbdmQpnMM6P9weAHGwNiw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
 LOG_CHANNEL=stack
 
