--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,14 @@
         "config:base",
         ":preserveSemverRanges"
     ],
+    "ignorePaths": {
+        "description": "Skip any package file whose path matches one of these. Can be string or glob pattern",
+        "type": "array",
+        "items": {
+            "type": "string"
+        },
+        "default": ["**/.foundation/**"]
+    },
     "dockerfile": {
         "enabled": false
     }
