--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^2.0.0",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-analytics": "^3.8"
     },
