--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,8 @@
         ":preserveSemverRanges"
     ],
     "ignorePaths": [
-        "**/.foundation/**"
+        "**/.foundation/**",
+        "**/.docker/**"
     ],
     "dockerfile": {
         "enabled": false
