--- a/.docker/mysql/my.cnf
+++ b/.docker/mysql/my.cnf
@@ -1,4 +1,19 @@
+#
+# The MySQL  Server configuration file.
+#
+# For explanations see
+# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
+
 [mysqld]
-general_log = 1
+pid-file         = /var/run/mysqld/mysqld.pid
+socket           = /var/run/mysqld/mysqld.sock
+datadir          = /var/lib/mysql
+secure-file-priv = NULL
+# Disabling symbolic-links is recommended to prevent assorted security risks
+symbolic-links   = 0
+
+# Custom config should go here
+!includedir /etc/mysql/conf.d/
+general_log      = 1
 general_log_file = /var/lib/mysql/general.log
 
