--- a/.docker/nginx/conf.d/app.conf
+++ b/.docker/nginx/conf.d/app.conf
@@ -2,12 +2,12 @@ server {
     listen 80; ## listen for ipv4; this line is default and implied
     listen [::]:80 default ipv6only=on; ## listen for ipv6
 
-    server_name localhost:9999;
+    server_name localhost;
 
     index index.php index.html;
 
-    # access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log;
 
     root /var/www/public;
 
@@ -21,8 +21,13 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    # Redirect all http to https
     location / {
-        return 301 https://$server_name$request_uri;
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
     }
+
+    # Redirect all http to https
+    # location / {
+    #     return 301 https://$server_name$request_uri;
+    # }
 }
