--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
 
   #PHP Service
@@ -29,7 +29,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "80:80"
+      - "9000:80"
       - "443:443"
     volumes:
       - ./:/var/www
@@ -40,7 +40,7 @@ services:
 
   #MySQL Service
   mysql:
-    image: mysql:5.7.29
+    image: mysql:8.0.19
     container_name: mysql
     restart: unless-stopped
     tty: true
@@ -52,8 +52,26 @@ services:
       SERVICE_NAME: mysql
       SERVICE_TAGS: dev
     volumes:
-      - dbdata:/var/lib/mysql/
+      - dbdata:/var/lib/mysql-files
       - .docker/mysql/my.cnf:/etc/mysql/my.cnf
+    networks:
+      - app-network
+
+    #MSSQl Service
+  mssql:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: mssql
+    build:
+      context: .docker/mssql
+      dockerfile: Dockerfile
+    environment:
+      SA_PASSWORD: "I9j@&17d8QzP4N1RLu1k!"
+      ACCEPT_EULA: "Y"
+      MSSQL_AGENT_ENABLED: "true"
+      SERVICE_NAME: mssql
+      SERVICE_TAGS: dev
+    ports:
+      - "1433:1433"
     networks:
       - app-network
 
@@ -65,10 +83,12 @@ services:
     container_name: phpmyadmin
     restart: unless-stopped
     ports:
-      - 8082:80
+      - "8082:80"
     environment:
       PMA_HOST: mysql
       MYSQL_ROOT_PASSWORD: root
+      SERVICE_NAME: phpmyadmin
+      SERVICE_TAGS: dev
     networks:
       - app-network
 
@@ -80,10 +100,10 @@ services:
     build:
       context: .docker/redis
       dockerfile: Dockerfile
-    environment:
-      - DISABLE_COMMANDS=FLUSHDB,FLUSHALL,CONFIG
     ports:
       - "6382:6379"
+    environment:
+      - DISABLE_COMMANDS=FLUSHDB,FLUSHALL,CONFIG
     networks:
       - app-network
 
