--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,17 +59,15 @@ services:
 
     #MSSQl Service
   mssql:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    image: mcr.microsoft.com/mssql/server:2017-latest
     container_name: mssql
     build:
       context: .docker/mssql
       dockerfile: Dockerfile
     environment:
-      SA_PASSWORD: "I9j@&17d8QzP4N1RLu1k!"
+      SA_PASSWORD: "1Secure*Password1"
       ACCEPT_EULA: "Y"
       MSSQL_AGENT_ENABLED: "true"
-      SERVICE_NAME: mssql
-      SERVICE_TAGS: dev
     ports:
       - "1433:1433"
     networks:
