--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "axios": "^0.19.2",
-        "bootstrap": "^4.4.1",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0.2",
-        "jquery": "^3.5.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.4",
         "lodash": "^4.17.13",
-        "popper.js": "^1.16.1",
-        "resolve-url-loader": "3.1.1",
-        "sass": "^1.26.5",
-        "sass-loader": "^8.0.2",
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
         "serialize-javascript": "^3.0.0",
-        "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     }
 }
