--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "pestphp/pest": "^0.2.3",
+        "nunomaduro/collision": "5.0.0-BETA2",
+        "pestphp/pest": "0.2.1",
         "phpunit/phpunit": "^9.0"
     },
     "config": {
