--- a/.github/workflows/phptests.yml
+++ b/.github/workflows/phptests.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: PHP Tests for Laravel Boilerplate
 
 on:
   push:
@@ -11,11 +11,12 @@ on:
 
 jobs:
   laravel-boilerplate-tests:
-
+    name: PHP Build Tests with PHPUnit
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
