--- a/.github/workflows/phptests.yml
+++ b/.github/workflows/phptests.yml
@@ -10,9 +10,14 @@ on:
       - master
 
 jobs:
-  laravel-boilerplate-tests:
+  php-tests-for-laravel-boilerplate:
     name: PHP Build Tests with PHPUnit
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
+        php-versions: ['7.2', '7.3', '7.4']
 
     steps:
       - name: Checkout
