--- a/.docker/nginx/conf.d/app.conf
+++ b/.docker/nginx/conf.d/app.conf
@@ -6,10 +6,26 @@ server {
 
     index index.php index.html;
 
+    charset utf-8;
+
     error_log /var/log/nginx/error.log warn;
     access_log /var/log/nginx/access.log;
 
     root /var/www/public;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+    }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -17,13 +33,12 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 
     # Redirect all http to https
